--- a/layouts/section/projetos.html
+++ b/layouts/section/projetos.html
@@ -14,6 +14,7 @@
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
                         <h2 class="section-title">Alguns projetos</h2>
+						<h3>Esta página não está completa!!</h3>
                     </div>
                     {{ "<!-- projeto -->" | safeHTML }}
                     {{ range where .Pages "Type" "projeto" }}
