--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,50 @@
 {{ define "main" }}
-
+{{ "<!-- header -->" | safeHTML }}
+<div class="col-md-12 nopadding">
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+		{{ range $index, $element := after 1 .Site.Params.carouselImagens }}
+		<li data-target="#carouselExampleIndicators" data-slide-to="{{ add $index 1 }}"></li>
+		{{ end }}
+		</ol>
+		<div class="carousel-inner carousel-inner-home">
+		{{ with (index $.Site.Params.carouselImagens 0) }}
+		<div class="carousel-item active">
+			<img class="d-block w-100" src="{{ . | absURL }}" alt="First slide">
+		</div>
+		{{ end }}
+		{{ range after 1 .Site.Params.carouselImagens }}
+		<div class="carousel-item">
+			<img class="d-block w-100" src="{{ . | absURL }}">
+		</div>
+		{{ end }}
+		</div>
+		
+	</div>
+	<div style="position: absolute; top:0px; width:100%; height:100%;">
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		<div class="col-md-6 offset-md-3 text-center vertical-center">
+			{{ with .Site.Params.banner.title }} <h1 id="bannerTitle" class="text-white mb-3">{{ . }}</h1> {{ end }}
+			{{ with .Site.Params.banner.description | safeHTML }} <p class="text-white mb-4">{{ . }}</p> {{ end }}
+		</div>
+	</div>
+	<div class="main-text hidden-xshidden-xs">
+		<div class="container mb-100">
+			{{ "<!-- navigation -->" | safeHTML }}
+			{{ partial "navigation.html" . }}
+			{{ "<!-- /navigation -->" | safeHTML }}
+		</div>
+	</div>
+</div>
+{{ "<!-- /header -->" | safeHTML }}
 {{ "<!-- sobre -->" | safeHTML }}
 <section class="section sec-about fs-large">
   <div class="container">
@@ -43,7 +88,7 @@
 {{ "<!-- /projetos -->" | safeHTML }}
 
 {{ "<!-- membros -->" | safeHTML }}
-  <section class="section sec-membros">
+  <section style="display: none;" class="section sec-membros">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
