Adicionado o ArmHack e o link para o github do Hes

--- a/layouts/projeto/projeto.html
+++ b/layouts/projeto/projeto.html
@@ -17,6 +17,7 @@
         {{ range .Params.DescricaoCompleta }}
         <p style="text-align: justify;">{{ . }}</p>
         {{ end }}
+        {{ .Params.ExtraHTML | safeHTML }}
     </div>
   </div>
 </section>
