Member list is now dynamic

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -94,7 +94,7 @@
 {{ "<!-- /projetos -->" | safeHTML }}
 
 {{ "<!-- membros -->" | safeHTML }}
-  <section style="display: none;" class="section sec-membros">
+  <section class="section sec-membros">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
