--- a/themes/dot/layouts/partials/head.html
+++ b/themes/dot/layouts/partials/head.html
@@ -17,7 +17,8 @@
   <link rel="stylesheet" href="{{ .Site.BaseURL }}plugins/highlight/hybrid.css">
   {{ "<!-- fonts -->" | safeHTML }}
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-
+  
+  <link href="{{ .Site.BaseURL }}css/custom.css" rel="stylesheet">
   <style>
   :root{
     --primary-color:{{ .Site.Params.primaryColor }};
