--- a/layouts/section/projetos.html
+++ b/layouts/section/projetos.html
@@ -1,7 +1,7 @@
 {{ partial "head.html" . }}
 
 {{ "<!-- navigation -->" | safeHTML }}
-<header class="shadow-bottom sticky-top bg-white">
+<header class="shadow-bottom sticky-top bg-gray">
   <div class="container">
     {{ partial "navigation.html" . }}
   </div>
@@ -9,7 +9,7 @@
 {{ "<!-- /navigation -->" | safeHTML }}
 
 <!-- details page -->
-<section class="single pt-5 bg-gray">
+<section class="single pt-5 sec-membros">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 text-center">
