--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   font-size: 18px;
   color: var(--text-color);
-  background-color: var(--secondary-color);
+  background-color: var(--secondary-color);   
+  height: 100%;
 }
 
 p,
