--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -662,7 +662,7 @@ li.parent a {
 }
 
 .sec-projetos {
-  background-color: #353535;
+  background-color: #2a2b29;
 }
 .projeto-foto {
   margin: 0.5em;
@@ -673,7 +673,7 @@ li.parent a {
 }
 
 .sec-contactos {
-  background-color: #353535;
+  background-color: #2a2b29;
   color: #bbbbbb;
 }
 
