--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -11,15 +11,19 @@
 <!-- details page -->
 <section style="text-align: justify;
 min-height: 100%;
-/* equal to footer height */ " class="single pt-5 sec-membros">
-    <h1 style="text-align: center;">Junta-te a nós</h2>
-	
-	<div class="container" style="background-color: 0xfff">
-		<!-- fix url -->
-		<a href='{{ "recrutamento" | absURL }}' class="btn btn-primary"> Clica aqui se quiseres saltar já á ação </a>
+/* equal to footer height */ " class="single sec-membros">
 
-		<section class="section sec-about fs-large">
-		<p> 
+	<div style="background-color: 0xfff">
+	<h1 class="responsiveHeaderText" style="color:white; text-align: center; height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Junta-te a nós</h1>
+	
+	<!--padding 100px-->
+	<div class="container pt-4" style="background-color: 0xfff">
+		<!-- fix url -->
+		<!-- <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary"> Clica aqui se quiseres saltar já á ação </a> -->
+
+		<section  class="dynamicThingy">
+		<h4> Apresentação do recrutamento </h4>
+		<p style="color:white; "> 
 			Boas cibernauta! Se estás a começar o teu curso de engenharia e gostavas 
 			de colocar as mãos na massa para ganhares experiência num certo ramo da
 			tecnologia, este é o sítio certo para ti. Somos um grupo de alunos de várias
@@ -30,60 +34,81 @@ min-height: 100%;
 		</p>
 		</section>
 
-		<section class="section sec-projetos shadow">
-		<p> 
+		<section class="dynamicThingy">
+		<h4> O que valorizamos (não é cibersegurança) </h4>
+		<p style="color:white; "> 
 			Como membro da HackerSchool, para além de te poderes chamar
 			Hacker e meter respeito a qualquer utilizador de computador
 			ou smartphone, terás sempre perto de ti: 
 		</p>
 
-		<ul>
+		<ul style="color:white; font-size:16px; text-align: left">
 			<li>
-				Uma equipa exploradora e interessada em aprender e ajudar; 
+				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Uma equipa exploradora e interessada em aprender e ajudar; 
 			</li>
 			<li>
-				Atividades e apoio para te manter no caminho certo e motivado; 
+				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Atividades e apoio para te manter no caminho certo e motivado; 
 			</li>
 			<li>
-				Várias oportunidades para aprender matéria nova ou até mesmo melhorar 
+				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Várias oportunidades para aprender matéria nova ou até mesmo melhorar 
 				a que já souberes - novo ou velho Hacker, aprender não tem idade; 
 			</li>
 			<li>
-				Um mundo de ideias e inovações que podem mudar a maneira como 
+				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Um mundo de ideias e inovações que podem mudar a maneira como 
 				vias as tecnologias à tua volta - podes começar a
 				questionar como o microondas funciona.
 			</li>
 		</ul>
 
-		<p>
+		<p style="color:white; ">
 			Ao mesmo tempo, como membro esperamos que tenhas imensa vontade e iniciativa 
 			para todos estes desafios e eventos (mesmo com ou sem COVID-19). 
 			Achas que aguentas?
 		</p>
 		</section>
 		
-		<section class="section sec-about fs-large">
-		<ol>
-			<ul>
-				Terás uma reunião inicial que serve para debater ideias e formar grupos,
+		<section  class="dynamicThingy">
+				<h4>Tens uma grande ideia mas não sabes como executá-la? A HackerSchool é o núcleo para ti!</h4>
+		<div style="color:white; display: flex; 
+        flex-wrap: wrap; flex-direction: row; justify-content: center; margin:auto;">
+			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy">
+				Terás uma reunião inicial que serve para debater ideias e para formar grupos,
 				desenvolvendo a tua parte social e trabalho em equipa
-			</ul>
-			<ul>
+
+				<br>
+				<div class="d-flex align-items-center justify-content-center">
+					<i class="fas fa-users fa-3x pt-2"></i>
+				</div>
+			</div >
+			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy">
 				Para alem disso, todos os semestres sao planeados varios workshops em
 				varias areas que consideramos importantes para desenvolver a tua cultura hacker.
-			</ul>
-			<ul>
+
+				<br>
+				<div class="d-flex align-items-center justify-content-center">
+					<i class="fas fa-cogs fa-3x pt-2"></i>
+				</div>
+			</div>
+			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy">
 				Para o caso de te sentires sozinho nesta jornada de fazer o teu
 				projeto acontecer, não te preocupes!
-			</ul>
-		</ol>
+
+				<br>
+				<div class="d-flex align-items-center justify-content-center">
+					<i class="fas fa-robot fa-3x pt-2"></i>
+				</div>
+			</div>
+		</div>
 
 		<!-- insert clipart here -->
 		</section>
 		
-		<section class="section sec-projetos shadow">
+		<section class="section pb-5 shadow">
 		<!-- fix url -->
-		<a href='{{ "recrutamento" | absURL }}' class="btn btn-primary"> Clica aqui se quiseres saltar já á ação </a>
+		<a href="https://maggyoliveira23.typeform.com/to/aOzGO5XL" class="btn btn-primary" 
+			style="text-align: center;vertical-align: middle;line-height: 40px;width: 100%;font-size: 30;"> 
+			Inscreve-te aqui!
+		</a>	
 		</section>
 		<!--
 		<p style="text-align: justify;">Somos um grupo de alunos de várias áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos, e transmitir os nossos conhecimentos!</p>
