--- a/themes/dot/layouts/partials/footer.html
+++ b/themes/dot/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 {{ "<!-- footer -->" | safeHTML }}
-<footer style="  height: 142px; " class="section bg-gray pb-0">
+<footer class="section sec-membros pb-0">
   <div class="container">
     <div class="row">
       <div class="col-md-4 text-md-left text-center">
