--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -28,10 +28,10 @@
 
         <div class="dynamicThingy">
         <h4 style="text-align: justify;">Como funciona?</h4>
-        <p style="color: white; text-align: justify;">A HackerSchool funciona em ciclos semestrais com Workshops, HackDays e o maior evento do semestre, o LX Reactor.</p>
+        <p style="color: white; text-align: justify;">A HackerSchool funciona em ciclos semestrais com WorkShops, HackDays e entre outros eventos de TeamBuilding.</p>
         <ul>
-        <li style="color: white; text-align: justify;"><strong>HackDay</strong>: Um dia de convívio entre os participantes, no qual se concebem projectos temáticos de curta duração.</li>
-        <li style="color: white; text-align: justify;"><strong>Workshop</strong>: Um evento em que é dada&nbsp;formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias.</li>
+        <li style="color: white; text-align: justify;"><strong>HackDay</strong>: Um dia de convívio entre os participantes, no qual se concebem projetos temáticos de curta duração.</li>
+        <li style="color: white; text-align: justify;"><strong>Workshop</strong>: Um evento em que é dada formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento pode ser divido entre WorkShops Internos - dados da comunidade do núcleo para o núcleo - e WorkShops Externos - dados para a comunidade do tecnico.</li>
         </ul>
         </div>
 
