--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -29,7 +29,7 @@ min-height: 100%;
 			tecnologia, este é o sítio certo para ti. Somos um grupo de alunos de várias
 			áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos,
 			e transmitir os nossos conhecimentos promovendo a entreajuda e inovação! 
-			A HackerSchool está a recrutar novos membros de 14 de Setembro a 19 de 
+			A HackerSchool está a recrutar novos membros de 14 de Setembro a 9 de 
 			Outubro.
 		</p>
 		</section>
@@ -106,8 +106,9 @@ min-height: 100%;
 		<section class="section pb-5 shadow">
 		<!-- fix url -->
 		<a href="https://maggyoliveira23.typeform.com/to/aOzGO5XL" class="btn btn-primary" 
-			style="text-align: center;vertical-align: middle;line-height: 40px;width: 100%;font-size: 30;"> 
-			Inscreve-te aqui!
+			style="text-align: center;vertical-align: middle;line-height: 40px;
+				width: 100%;font-size: 30; background-color: gray;"> 
+			Inscreve-te no proximo semestre!
 		</a>	
 		</section>
 		<!--
