Add members and improve overall website dynamicness

--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -11,7 +11,7 @@
 <!-- details page -->
 <section style="text-align: justify;
 min-height: 100%;
-/* equal to footer height */ " class="single sec-membros">
+/* equal to footer height */ " class="single sec-membros fader-alternate">
 
 	<div style="background-color: 0xfff">
 	<h1 class="responsiveHeaderText" style="color:white; text-align: center; height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Junta-te a nós</h1>
@@ -21,7 +21,7 @@ min-height: 100%;
 		<!-- fix url -->
 		<!-- <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary"> Clica aqui se quiseres saltar já á ação </a> -->
 
-		<section  class="dynamicThingy">
+		<section  class="dynamicThingy fader">
 		<h4> Apresentação do recrutamento </h4>
 		<p style="color:white; "> 
 			Boas cibernauta! Se estás a começar o teu curso de engenharia e gostavas 
@@ -34,7 +34,7 @@ min-height: 100%;
 		</p>
 		</section>
 
-		<section class="dynamicThingy">
+		<section class="dynamicThingy fader">
 		<h4> O que valorizamos (não é cibersegurança) </h4>
 		<p style="color:white; "> 
 			Como membro da HackerSchool, para além de te poderes chamar
@@ -67,7 +67,7 @@ min-height: 100%;
 		</p>
 		</section>
 		
-		<section  class="dynamicThingy">
+		<section  class="dynamicThingy fader">
 				<h4>Tens uma grande ideia mas não sabes como executá-la? A HackerSchool é o núcleo para ti!</h4>
 		<div style="color:white; display: flex; 
         flex-wrap: wrap; flex-direction: row; justify-content: center; margin:auto;">
@@ -103,11 +103,11 @@ min-height: 100%;
 		<!-- insert clipart here -->
 		</section>
 		
-		<section class="section pb-5 shadow">
+		<section class="section pb-5 shadow fader">
 		<!-- fix url -->
 		<a href="https://maggyoliveira23.typeform.com/to/aOzGO5XL" class="btn btn-primary" 
 			style="text-align: center;vertical-align: middle;line-height: 40px;
-				width: 100%;font-size: 30; background-color: gray;"> 
+				width: 100%;font-size: 30;"> 
 			Inscreve-te no proximo semestre!
 		</a>	
 		</section>
