--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -9,24 +9,24 @@
 {{ "<!-- /navigation -->" | safeHTML }}
 
 <!-- details page -->
-<section style="padding-bottom: 48px;" class="single sec-membros">
+<section style="padding-bottom: 48px;" class="single sec-membros fader-alternate">
   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Sobre nós</h1> 
   
   <div class="container pt-4">
     <!-- <div style="color: white;" class="p-5 bg-gray"> -->
 	        
-        <div class="dynamicThingy">
+        <div class="dynamicThingy fader">
         <h4>Quem somos?</h4>
         <p style="color: white; text-align: justify;">Somos um grupo de alunos de várias áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos, e transmitir os nossos conhecimentos!</p>
         </div>
         
-        <div class="dynamicThingy">
+        <div class="dynamicThingy fader">
         <h4 style="text-align: justify;">O que é a HackerSchool?</h4>
         <p style="color: white; text-align: justify;">A HackerSchool é uma associação académica, fundada em 2012, que desenvolve actividades num ambiente multidisciplinar, de <em>learn-by-doing</em> e de aprendizagem entre pares, inspirado nos valores da cultura <a href="http://stallman.org/articles/on-hacking.html" title="What is Hacking?" target="_blank"><em>hacker</em></a>.</p>
         <p style="color: white; text-align: justify;">Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em <em>open electronics</em>, <em>open materials</em>, <em>open fabrication</em>, entre outros.</p>
         </div>
 
-        <div class="dynamicThingy">
+        <div class="dynamicThingy fader">
         <h4 style="text-align: justify;">Como funciona?</h4>
         <p style="color: white; text-align: justify;">A HackerSchool funciona em ciclos semestrais com WorkShops, HackDays e entre outros eventos de TeamBuilding.</p>
         <ul>
@@ -35,7 +35,7 @@
         </ul>
         </div>
 
-        <div class="dynamicThingy">
+        <div class="dynamicThingy fader">
         <h4 style="text-align: justify;">Objectivos</h4>
         <p style="color: white; text-align: justify;">O objectivo prioritário da HackerSchool é criar um espaço de colaboração que estimule alunos apaixonados por tecnologia a realizar os seus projectos e, dessa forma, ajudá-los a encontrar a sua vocação e atingir o seu potencial máximo, tanto como indivíduos como empreendedores, através de uma interacção hands-on com tecnologia, engenharia e ciência.</p>
         <p style="color: white; text-align: justify;">Pretende-se ter uma geração de alunos com ideias novas e um modo diferente de pensar sobre o mundo, que criem produtos e soluções inovadoras.</p>
