--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -103,9 +103,9 @@ min-height: 100%;
 		<!-- insert clipart here -->
 		</section>
 		
-		<section class="section pb-5 shadow fader">
+		<section class="section shadow fader">
 		<!-- fix url -->
-		<a href="https://maggyoliveira23.typeform.com/to/aOzGO5XL" class="btn btn-primary" 
+		<a href="https://maggyoliveira23.typeform.com/to/aOzGO5XL" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} disabled {{ end }}" 
 			style="text-align: center;vertical-align: middle;line-height: 40px;
 				width: 100%;font-size: 30;"> 
 			Inscreve-te no proximo semestre!
