--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,9 +46,9 @@
       {{ with .Site.Params.banner.description | safeHTML }} <p class="disapearWhenSmall text-white mb-4">{{ . }}</p> {{ end }}
       <br>
       <div style="position: absolute; bottom: 20%; width:100%; ">
-        
+        {{ if .Site.Params.recruitmentTime }}
           <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary">Recrutamento 2020/2021 </a>
-        
+        {{ end }}
       </div>
     </div>
 	</div>
