--- a/layouts/page/membros.html
+++ b/layouts/page/membros.html
@@ -11,11 +11,9 @@
 <!-- details page -->
 <section style="padding-bottom: 48px;" class="single sec-membros">
   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;"> Membros </h1> 
-  
-  <div class="container pt-4">
         
 {{ "<!-- membros -->" | safeHTML }}
-  <section class="section sec-membros">
+  <section class="section sec-projetos">
     <div class="container">
       <div class="col-12 text-center">
         <h2 class="section-title">Direção</h2>
@@ -36,9 +34,11 @@
           </div>
           {{ end }}
       </div>
+    </div>
+  </section>
 
-
-      
+  <section class="section sec-membros">
+    <div class="container">      
       <div class="col-12 text-center">
         <h2 class="section-title">Membros</h2>
       </div>
@@ -64,7 +64,6 @@
 
 
     <!-- </div> -->
-  </div>
 </section>
 
 {{ partial "footer.html" . }}
